Store Locator/objects/Location/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <label>Facilities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>