Store Locator/objects/Location/fields/Preferred_Store__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferred Store</label>
    <type>Checkbox</type>
</CustomField>