Store Locator/objects/Location/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>