Store Locator/objects/Location/fields/Store_Timings__c.field-meta.xml
<CustomField>
    <fullName>Store_Timings__c</fullName>
    <label>Store Timings</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>